# grism

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_streamlit.sh
grism/: __init__.py  grism.py  ui_streamlit.py
grism/data/: default.mplstyle
