[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grism"
version = "0.0.1"
description = "Simple biology-style plots with stats and annotations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Grant" }
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "seaborn>=0.12",
  "streamlit>=1.28",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grism*"]
